--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230306134741">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230306180803">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,6 +35,7 @@
 				<div class="header__info">
 					<form action="" class="header__form">
 						<input type="text" class="header__seach" placeholder="Search...">
+						<img src="img/icons/seach.svg" alt="" class="header__img-seach">
 						<button class="header__button">
 							<img src="img/icons/bag.svg" alt="">
 						</button>
@@ -330,6 +331,7 @@
 						<h2 class="subscribe__title">Subscribe Our <span>Newsletter</span></h2>
 						<div class="subscribe__text">Subscribe our newsletter to stay updated every moment</div>
 						<form action="#" class="subscribe__form">
+
 							<input type="text" class="subscribe__email" placeholder="Enter Your Email Address...">
 							<button class="subscribe__button">Subscribe</button>
 						</form>
@@ -439,7 +441,7 @@
 </div>
  -->
 
-	<script src="js/app.min.js?_v=20230306134741"></script>
+	<script src="js/app.min.js?_v=20230306180803"></script>
 </body>
 
 </html>
